<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddRow">

        <TextView
                android:id="@+id/name_text_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_centerHorizontal="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/name_text_add"
            android:ems="10"
            android:id="@+id/name_input"
            android:hint="@string/name_hint"/>
    <TextView
            android:text="@string/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/url_text_add"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/name_input"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:ems="10"
            android:id="@+id/url_input"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/url_text_add"
            android:hint="@string/url_hint"/>
    <TextView
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date_text_add"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/url_input"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/date_text_add"
            android:hint="@string/date_hint"
            android:ems="10"
            android:id="@+id/date_input"/>
    <Button
            android:text="@string/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/add_button"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_arrow_forward_black_24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/date_input"
            android:background="@null"
            android:id="@+id/imageButton" android:contentDescription="@string/arrow" android:visibility="visible"/>


</RelativeLayout>