<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/guideline2"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.4"/>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/card"
            android:focusable="true"
            android:clickable="true"
            android:layout_margin="8dp"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blueBackground"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.222"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/card"
                android:layout_marginTop="8dp">

            <TextView
                    android:text="@string/details"
                    android:layout_width="wrap_content"
                    android:layout_height="29dp"
                    android:id="@+id/details"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"/>
            <TextView
                    android:text="@string/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/name_in_details"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="50dp"
                    app:layout_constraintTop_toBottomOf="@+id/details"/>
            <TextView
                    android:text="@string/tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tags_details"
                    android:layout_marginTop="40dp"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/name_in_details"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_input_details" android:layout_marginTop="50dp"
                    app:layout_constraintTop_toBottomOf="@+id/details"
                    app:layout_constraintStart_toEndOf="@+id/name_in_details" android:layout_marginLeft="60dp"
                    android:layout_marginStart="60dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tags_input_details" app:layout_constraintStart_toEndOf="@+id/tags_details"
                    android:layout_marginLeft="67dp" android:layout_marginStart="67dp" android:layout_marginTop="43dp"
                    app:layout_constraintTop_toBottomOf="@+id/name_input_details"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>